--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-mesto-auth",
-  "homepage": "https://frontendz7.github.io/mesto-react-auth/",
+  "homepage": "https://frontendz7.github.io/react-mesto-auth/",
   "version": "0.1.0",
   "private": true,
   "description": "The project Mesto React",
